--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/node": "16.11.17",
     "@typescript-eslint/parser": "5.8.0",
     "@vitejs/plugin-vue": "^2.0.0",
     "eslint": "8.5.0",
