--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "pinia": "2.0.8",
+    "@mobily/ts-belt": "3.6.0",
+    "pinia": "2.0.9",
     "vue": "^3.2.25"
   },
   "devDependencies": {
